typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts:2:1
  |
2 | eval += 1;
  | ^^^^

error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts:2:1
  |
2 | eval += 1;
  | ^^^^

